--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -8,47 +8,51 @@
             </h2>
         </div>
         <div class="panel-body">
-            <h4>  Filters  
-                <div class="form-group row pull-right col-md-6">
-                    <div class="col-md-2">
-                        <span>Total: </span>
-                    </div>
-                    <div class="col-md-3">
-                        <label>{{totalCount}} </label>
-                    </div>
+            <h4 class="col-md-6 col-sm-6 col-xs-6">Filters</h4>
+            <div class="form-group order-total row pull-right col-md-6 col-sm-6 col-xs-6">
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    <span>Total: </span>
                 </div>
-            </h4>
-            <div class="col-xs-12">
-               <div class="col-xs-5">
-                    <div class="form-group row">
-                        <div class="col-md-4">
-                            <label class="form-control-label" for="l0">Order ID </label>
-                        </div>
-                        <div class="col-md-8">
-                            <input type="text" class="form-control" name="searchName" ng-model="search.name">
-
-                        </div>
-                    </div>
-
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    <label>{{totalCount}} </label>
                 </div>
-                <div class="col-xs-1"><a href="javascript: void(0);" class="btn btn-primary" ng-click="applyFilters(search)">Apply</a></div>
-                
-                <div class="col-xs-5">
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            <label class="form-control-label" for="l0">Vendors </label>
-                        </div>
-                        <div class="col-md-9">
-                            <select ng-model="search.vendor" ng-options="vendors.id as vendors.firstName for vendors in vendorList track by vendors.id" class="form-control" name="searchvendor">
-
-                                <option value="" selected>All</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-1"><a href="javascript: void(0);" class="btn btn-primary" ng-click="resetFilters()">Reset</a></div>
-               
             </div>
+            <div class="row">
+              <div class="col-xs-12">
+                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                      <div class="form-group row">
+                          <div class="col-md-3 col-sm-3 col-xs-3">
+                              <label class="form-control-label" for="l0">Order ID </label>
+                          </div>
+                          <div class="col-md-6 col-sm-6 col-xs-6">
+                              <input type="text" class="form-control" name="searchName" ng-model="search.name">
+
+                          </div>
+                            <div class="col-md-3 col-sm-3 col-xs-3"><a href="javascript: void(0);" class="btn btn-primary" ng-click="applyFilters(search)">Apply</a></div>
+                      </div>
+
+                  </div>
+
+
+                  <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                      <div class="form-group row">
+                          <div class="col-md-3 col-sm-3 col-xs-3">
+                              <label class="form-control-label" for="l0">Vendors </label>
+                          </div>
+                          <div class="col-md-6 col-sm-6 col-xs-6">
+                              <select ng-model="search.vendor" ng-options="vendors.id as vendors.firstName for vendors in vendorList track by vendors.id" class="form-control" name="searchvendor">
+
+                                  <option value="" selected>All</option>
+                              </select>
+                          </div>
+                            <div class="col-md-3 col-sm-3 col-xs-3"><a href="javascript: void(0);" class="btn btn-primary" ng-click="resetFilters()">Reset</a></div>
+                      </div>
+                  </div>
+
+
+              </div>
+            </div>
+
         </div>
         <div class="panel-body">
 
