--- a/src/app/products-list/products-list.html
+++ b/src/app/products-list/products-list.html
@@ -12,44 +12,53 @@
 
         </div>
         <div class="panel-body">
-            <h4>
+            <h4 class="col-md-6 col-sm-6 col-xs-6">
                 Filters
-
             </h4>
+            <!-- <div class="form-group order-total col-md-6 col-xs-12">
+              <div class="form-grou row">
+                <div class="col-md-3 col-sm-3 col-xs-3">
+                    <small>Search</small>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-9">
+                  <input type="text" class="form-control" ng-model="search.name" placeholder="Search keyword"
+                         id="l0">
+                </div>
+              </div>
+
+            </div> -->
+
             <div class="col-xs-12">
-                <div class="col-xs-3  ">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-3 col-xs-3">
                             <label class="form-control-label" for="l0">Search </label>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-6 col-sm-6 col-xs-9">
                             <input type="text" class="form-control" ng-model="search.name" placeholder="Search keyword"
                                    id="l0">
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-3 col-xs-3">
                             <label class="form-control-label" for="l0">Vendors </label>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-6 col-sm-6 col-xs-9">
                             <select class="form-control" name="searchvendor" ng-model="search.vendor"
                                     ng-options="vendors.id as vendors.firstName for vendors in vendorList ">
                                 <option value="" selected>All</option>
-
-
                             </select>
                         </div>
                     </div>
-
                 </div>
-                <div class="col-xs-3">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-3 col-xs-3">
                             <label class="form-control-label" for="l0">Status </label>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-6 col-sm-6 col-xs-9">
                             <select class="form-control" name="searchstatus" ng-model="search.status">
                                 <option value="" selected>All</option>
                                 <option value="ACTIVE">Active</option>
@@ -57,26 +66,22 @@
                             </select>
                         </div>
                     </div>
-
                 </div>
 
-                <div class="col-xs-3">
-                    <div class="col-md-6">
+                <div class="col-md-6 col-sm-6 col-xs-12 pull-right btn-margin">
+                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-5">
                            <button class="pull-right btn btn-primary"
                                          ng-click="resetFilters()">Reset</button>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-5">
                           <button   class="pull-right btn btn-primary"
                                          ng-click="export(search.vendor)">export</button>
                         </div>
                   </div>
             </div>
         </div>
-
         <div class="panel-body" >
-
             <div class="cui-ecommerce--catalog" >
-
                 <div class="row">
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12"
                          ng-repeat="products in productsList  | filter :{ title : search.name,owner:search.vendor,status:search.status}">
@@ -334,7 +339,7 @@
                             <td class="text-nowrap">
                                 <span ng-show="modalDetials.status == 'DELETED'"> Reason to Delete</span>
                                  <span ng-show="modalDetials.status == 'ACTIVE'"> Reason to Active</span>
-                              
+
                             </td>
                             <td><textarea class="form-control" name="reasonToBlock" ng-model="modalDetials.reason"></textarea>
 
