--- a/src/app/audit-logs/audit-logs.html
+++ b/src/app/audit-logs/audit-logs.html
@@ -1,5 +1,4 @@
 <div class="page-content-inner">
-
     <!-- Ecommerce Products List -->
     <section class="panel panel-with-borders">
         <div class="panel-heading">
@@ -10,7 +9,6 @@
         <div class="panel-body">
             <h4>
                 Filters
-
             </h4>
             <div class="col-xs-12">
                 <!--<div class="col-xs-3  ">
@@ -33,7 +31,7 @@
                                         <option value=""  selected >All</option>
                                         <option value="VENDOR">Vendor</option>
                                         <option value="BUYER">Buyer</option>
-                                        
+
                                     </select>
                         </div>
                     </div>
@@ -69,10 +67,8 @@
 
                         </tr>
                     </thead>
-
                     <tbody>
-
-                        <tr dir-paginate="log in auditLogsList   |  orderBy:'createdAt':ascending | itemsPerPage:itemsPerPage" current-page="currentPage">
+                        <tr dir-paginate="log in auditLogsList   |  itemsPerPage:itemsPerPage" current-page="currentPage" total-items="totalCount">
                             <td>{{itemsPerPage *(currentPage-1)+$index+1}} </td>
                             <td>
                                 <span ng-if="log.user == 'ANONYMOUS'">{{log.user}} </span>
@@ -81,20 +77,16 @@
                             <td> {{log.url}} </td>
                             <!--<td>   {{log.method}}  </td>-->
                             <td> {{log.createdAt | date : 'yyyy-MM-dd'}} </td>
-
                         </tr>
                         <tr ng-show="!(auditLogsList).length">
                             <td colspan="5">
                                 <center>No data found</center>
                             </td>
-
                         </tr>
-
                         <tr>
-                            <td colspan="5">
+                            <td colspan="5" align="center">
                                 <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true"></dir-pagination-controls>
                             </td>
-
                         </tr>
                     </tbody>
                 </table>
