--- a/src/app/index.html
+++ b/src/app/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="assets/common/css/source/external.css">
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="assets/common/css/main.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/common/css/star-rating.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/common/css/star-rating.css"> -->
       <link rel="stylesheet" type="text/css" href="assets/vendors/summernote/dist/summernote.css">
 
 
@@ -196,10 +196,16 @@
                         </a>
                     </li>
                     <li>
+                        <a class="left-menu-link" href="#!/products-upload">
+                            Products Bulk Upload
+                        </a>
+                    </li>
+                    <li>
                         <a class="left-menu-link" href="#!/orders">
                             Orders List
                         </a>
                     </li>
+                    
 
                 </ul>
             </li>
