Competitors list added

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -276,13 +276,18 @@
                     <span class="menu-top-hidden">Audit Logs</span>
                 </a>
             </li>
+            <li>
+                <a class="left-menu-link" href="#!/competitors-list">
+                   <i class="left-menu-link-icon icmn-clipboard3"><!-- --></i>
+                    <span class="menu-top-hidden">Competitors List</span>
+                </a>
+            </li>
 
 
 
-
-             <li class="left-menu-list-submenu">
+             <!-- <li class="left-menu-list-submenu">
                 <a class="left-menu-link" href="javascript: void(0);">
-                    <i class="left-menu-link-icon icmn-cog util-spin-delayed-pseudo"><!-- --></i>
+                    <i class="left-menu-link-icon icmn-cog util-spin-delayed-pseudo"></i>
                     <span class="menu-top-hidden">Theme</span> Settings
                 </a>
                 <ul class="left-menu-list list-unstyled">
@@ -422,7 +427,7 @@
                         </div>
                     </li>
                 </ul>
-            </li>
+            </li> -->
             <!--<li class="menu-top-hidden no-colorful-menu">-->
                 <!--<div class="example-left-menu-chart chartist-animated chartist-theme-dark"></div>-->
                 <!--<script>-->
