--- a/src/app/audit-logs/audit-logs.html
+++ b/src/app/audit-logs/audit-logs.html
@@ -85,7 +85,7 @@
                         </tr>
                         <tr>
                             <td colspan="5" align="center">
-                                <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true"></dir-pagination-controls>
+                                <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true" on-page-change="pageChanged(newPageNumber)"></dir-pagination-controls>
                             </td>
                         </tr>
                     </tbody>
