--- a/src/app/users/users-list.html
+++ b/src/app/users/users-list.html
@@ -67,7 +67,7 @@
                             <th>Name</th>
                             <th>Role</th>
                             <th>Email</th>
-        
+
                             <th>Mobile Number</th>
                             <th>Created Date</th>
                             <th>Status</th>
@@ -115,7 +115,7 @@
                 </table>
             </div>
         </div>
-        </section>
+    </section>
     <!-- End Ecommerce Products List -->
 
 </div>
@@ -170,7 +170,7 @@
 
                             <tr>
                                 <td class="text-nowrap">
-                                    Role
+                                    Change Role
                                 </td>
                                 <td>
                                     <span ng-repeat="role in modalDetials.role" class="label label-pill label-default font-size-14 margin-inline">{{role}}</span>
