--- a/src/app/users/users-list.html
+++ b/src/app/users/users-list.html
@@ -93,21 +93,21 @@
                                 </tr>
                             </tfoot>-->
                     <tbody>
-                        <tr dir-paginate="users in userList   | filter : {firstName:search.name,role:search.role,status:search.status} | itemsPerPage:itemsPerPage"
-                            current-page="currentPage">
+                        <tr dir-paginate="users in userList   | filter : {firstName:search.name,role:search.role,status:search.status} | itemsPerPage:itemsPerPage" current-page="currentPage">
                             <!--<td><a href="javascript: void(0);" class="link-underlined">{{$index+1}}</a></td>-->
                             <td>{{itemsPerPage *(currentPage-1)+$index+1}}</td>
-                            <td><a href="javascript: void(0);" class="cui-ecommerce--dashboard--list--img"><img ng-src="{{users.gravatarUrl}}" /></a></td>
+                            <td>
+                                <a href="javascript: void(0);" class="cui-ecommerce--dashboard--list--img"><img ng-src="{{users.gravatarUrl}}" /></a>
+                            </td>
                             <td>{{users.firstName}} {{users.lastName}}</td>
-                            <td><span ng-repeat="role in users.role" class="label label-pill label-default font-size-14 margin-inline">{{role}}</span>                                </td>
+                            <td><span ng-repeat="role in users.role" class="label label-pill label-default font-size-14 margin-inline">{{role}}</span> </td>
                             <td>{{users.email}}</td>
                             <td>{{users.mobileNumber}}</td>
                             <td>{{users.createdAt | date : 'yyyy-MM-dd'}}</td>
                             <td><span class="label {{users.status == 'ACTIVE' ? 'label-success' : ''}} {{users.status == 'DELETED' ? 'label-danger':''}} {{users.status == 'NOTVERIFIED' ? 'label-default':''}} ">{{users.status}}</span></td>
                             <td>
                                 <!--<a href="javascript: void(0);" class="link-underlined margin-right-5"><i class="icmn-pencil5"> </i> View</a>-->
-                                <button type="button" class="btn btn-rounded btn-secondary-outline margin-inline" data-toggle="modal" data-target="#userData"
-                                    ng-click="userDetails(users);">
+                                <button type="button" class="btn btn-rounded btn-secondary-outline margin-inline" data-toggle="modal" data-target="#userData" ng-click="userDetails(users);">
                                            <i class="icmn-pencil5"> </i> View
                                        </button>
                             </td>
@@ -157,7 +157,9 @@
                                 <td class="text-nowrap">
                                     Profile image
                                 </td>
-                                <td><a href="javascript: void(0);" class="cui-ecommerce--dashboard--list--img"><img ng-src="{{modalDetials.gravatarUrl}}" /></a>                                    </td>
+                                <td>
+                                    <a href="javascript: void(0);" class="cui-ecommerce--dashboard--list--img"><img ng-src="{{modalDetials.gravatarUrl}}" /></a>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="text-nowrap">
@@ -182,7 +184,10 @@
                                 <td class="text-nowrap">
                                     Role
                                 </td>
-                                <td><span ng-repeat="role in modalDetials.role" class="label label-pill label-default font-size-14 margin-inline">{{role}}</span>                                    </td>
+                                <td><span ng-repeat="role in modalDetials.role"><span class="label label-pill label-default font-size-14 margin-inline">{{role}}</span><span class="label label-pill label-default font-size-14 margin-inline">Distibutor</span>
+                                    <span class="label label-pill label-default font-size-14 margin-inline roleActive">Buyer</span>
+                                    </span>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="text-nowrap">
@@ -208,7 +213,7 @@
                                 </td>
                                 <td>{{modalDetials.createdAt | date : 'yyyy-MM-dd'}}</td>
                             </tr>
-                           
+
                             <th>
                                 <td colspan="2">Profile Detials</td>
                             </th>
@@ -236,8 +241,7 @@
 
                                                         <tbody>
                                                             <tr ng-repeat="address in companyProfile.addressArray   ">
-                                                                <td>{{$index+1}}. {{address.address}}, {{address.city}}, {{address.state}},
-                                                                    {{address.country}}, pincode : </td>
+                                                                <td>{{$index+1}}. {{address.address}}, {{address.city}}, {{address.state}}, {{address.country}}, pincode : </td>
 
                                                             </tr>
                                                         </tbody>
@@ -296,7 +300,9 @@
 
                                                         <tbody>
                                                             <tr ng-repeat="row in legalities.imageproofs   ">
-                                                                <td colspan="2"> <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a></td>
+                                                                <td colspan="2">
+                                                                    <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a>
+                                                                </td>
 
 
                                                             </tr>
@@ -353,7 +359,9 @@
 
                                                         <tbody>
                                                             <tr ng-repeat="row in news.imageproofs   ">
-                                                                <td colspan="2"> <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a></td>
+                                                                <td colspan="2">
+                                                                    <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a>
+                                                                </td>
 
 
                                                             </tr>
@@ -367,7 +375,7 @@
                                     </table>
                                 </td>
                             </tr>
-                             <tr>
+                            <tr>
                                 <td class="text-nowrap">
                                     Status
                                 </td>
@@ -408,7 +416,7 @@
     // })
 </script>
 <script>
-    $(function () {
+    $(function() {
 
         $('.select2').select2();
         $('.select2-tags').select2({
