changes for admin changes

--- a/src/app/users/users-list.html
+++ b/src/app/users/users-list.html
@@ -171,14 +171,13 @@
                                 <td class="text-nowrap">
                                     Change Role
                                 </td>
-                                <td>
+                                <!--<td>
                                     <span ng-repeat="role in modalDetials.role" class="label label-pill label-default font-size-14 margin-inline">{{role}}</span>
-                                </td>
-                                <<<<<<< HEAD <td><span ng-repeat="role in modalDetials.role"><span class="label label-pill label-default font-size-14 margin-inline">{{role}}</span><span class="label label-pill label-default font-size-14 margin-inline">Distibutor</span>
+                                </td>-->
+                                <td><span ng-repeat="role in modalDetials.role"><span class="label label-pill label-default font-size-14 margin-inline">{{role}}</span><span class="label label-pill label-default font-size-14 margin-inline">Distibutor</span>
                                     <span class="label label-pill label-default font-size-14 margin-inline roleActive">Buyer</span>
                                     </span>
-                                    </td>
-                                    ======= >>>>>>> 360ceaa63359d71df8783ff25ad634ba1315d520
+                                </td>
                             </tr>
                             <tr>
                                 <td class="text-nowrap">
@@ -292,12 +291,8 @@
                                                         <tbody>
                                                             <tr ng-repeat="row in legalities.imageproofs   ">
                                                                 <td colspan="2">
-                                                                    <<<<<<< HEAD <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a>
-                                                                        =======
-                                                                        <a href="{{row.oralink}}" target="_blank">
-                                                                            <img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}">
-                                                                        </a>
-                                                                        >>>>>>> 360ceaa63359d71df8783ff25ad634ba1315d520
+                                                                    <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a>
+
                                                                 </td>
 
 
@@ -356,12 +351,12 @@
                                                         <tbody>
                                                             <tr ng-repeat="row in news.imageproofs   ">
                                                                 <td colspan="2">
-                                                                    <<<<<<< HEAD <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a>
-                                                                        =======
-                                                                        <a href="{{row.oralink}}" target="_blank">
-                                                                            <img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}">
-                                                                        </a>
-                                                                        >>>>>>> 360ceaa63359d71df8783ff25ad634ba1315d520
+                                                                    <a href="{{row.oralink}}" target="_blank"><img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}"></a>
+
+                                                                    <a href="{{row.oralink}}" target="_blank">
+                                                                        <img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}">
+                                                                    </a>
+
                                                                 </td>
 
 
