Order Reports Added

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -206,7 +206,11 @@
                             Orders List
                         </a>
                     </li>
-                    
+                    <li>
+                        <a class="left-menu-link" href="#!/order-reports">
+                            Order Reports
+                        </a>
+                    </li>
 
                 </ul>
             </li>
