Stop Sales button added in vendor list

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -149,13 +149,16 @@
                     Users
                 </a>
                 <ul class="left-menu-list list-unstyled">
-
                     <li>
                         <a class="left-menu-link" href="#!/users/list">
                            Users List
                         </a>
                     </li>
-
+                    <li>
+                        <a class="left-menu-link" href="#!/vendors/list">
+                           Vendors List
+                        </a>
+                    </li>
 
                 </ul>
             </li>
