--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -51,13 +51,14 @@
                                placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <a href="javascript: void(0);" class="pull-right">Forgot Password?</a>
-                        <div class="checkbox">
+                        <!-- <a href="javascript: void(0);" class="pull-right">Forgot Password?</a> -->
+                        <!-- <div class="checkbox">
                             <label>
                                 <input type="checkbox" name="example6" checked>
                                 Remember me
                             </label>
-                        </div>
+                        </div> -->
+                        <label ng-if="error" class="text-danger">{{error}}</label>
                     </div>
                     <div class="form-actions">
                         <button type="submit" class="btn btn-primary width-150">Sign In</button>
