--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -6,7 +6,7 @@
             <div class="col-lg-4">
                 <div class="logo">
                     <a href="javascript: history.back();">
-                        <img src="../assets/common/img/logo.png" alt="Clean UI Admin Template" />
+                        <img src="../assets/common/img/logo1.png" alt="Clean UI Admin Template" />
                     </a>
                 </div>
             </div>
